2003-04-14  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/driver/bj8pa06n.upp.xml,
	  db/source/driver/bjc610a0.upp.xml,
	  db/source/driver/epl5700l.xml, db/source/driver/epl5800l.xml,
	  db/source/driver/epl5900l.xml, db/source/driver/pnm2ppa.xml,
	  db/source/driver/pxlmono.xml, db/source/driver/st640ih.upp.xml,
	  db/source/driver/stc2.upp.xml, db/source/driver/stc300.upp.xml,
	  db/source/driver/stc.upp.xml: Removed the "*Resolution ..."
	  lines from the <ppdentry>s, the "*DefaultResolution: ..." is
	  enough to tell to a client application what the printer's
	  resolution is (Adobe PPD spec 4.3, section 5.9, p. 84, Note and
	  section 4.5, p. 40) and the "*Resolution ..." lines produce ugly
	  widgets with one choice in GUIs.

2003-04-13  Till Kamppeter <till.kamppeter@gmx.net>

	* README, USAGE: Updated for Foomatic 3.0.0rc1 (string, password,
	  and forced composite options).

2003-04-12  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Printrex-820_DL.xml: Fixed URL.

2003-04-10  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Epson-CL_760.xml, printer/Epson-PM_740C.xml,
	  printer/Epson-PM_870C.xml, printer/Epson-PM_930C.xml,
	  printer/Epson-PM_3700C.xml: Added new japanese printer models.
	
2003-04-08  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/driver/lxm3200-tweaked.xml: Updated the download URLs.

2003-04-07  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Minolta-magicolor_2200_DL.xml opt/foo2zjs-ColorMode.xml,
	  opt/foo2zjs-Copies.xml, opt/foo2zjs-Duplex.xml,
	  opt/foo2zjs-ICM.xml, opt/foo2zjs-InputSlot.xml,
	  opt/foo2zjs-Intent.xml, opt/foo2zjs-MediaType.xml,
	  opt/foo2zjs-Nup.xml, opt/foo2zjs-PageSize.xml,
	  opt/foo2zjs-Resolution.xml: Applied patch from Rick Richardson
	  to update the Foomatic data to the current state of the
	  "foo2zjs" driver.
	
2003-04-01  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/pxlmono-PrintoutMode.xml: Corrected values of GSResolution
	  option.
