@@ -26,14 +26,8 @@
     gamma correction of CUPS, or use the 600dpi resolution (native
     resolution of the printer).&lt;p&gt;
 
-    Unidirectional printing on the Z12 is possible now and gives a
-    much higher printout quality. Please replace the
-    &lt;tt&gt;gdevlx32.c&lt;/tt&gt; of the driver downloaded from the
-    address shown below by &lt;a
-    href=&quot;/download/printing/gdevlx32.c&quot;&gt;this
-    one&lt;/a&gt; or use the current CVS of &lt;a
-    href=&quot;http://www.cups.org/ghostscript.html&quot;&gt;ESP
-    GhostScript&lt;/a&gt; to be able to do so.&lt;p&gt;
+    Unidirectional printing on the Z12 and the Z31 is possible and gives a
+    much higher printout quality.&lt;p&gt;
 
     From the Z31 there came out models which need different margin
     settings. If the print head of your Z31 goes over the end of its
@@ -55,8 +49,10 @@
     that these printers are not officially supported by this
     driver. Use Lexmark&apos;s drivers for the Z22/Z32.&lt;p&gt;
 
-    This driver is also in the CVS of ESP GhostScript
-    (&quot;lxm3200&quot; device). When one does not use the
+    This driver is also in the CVS of &lt;a
+    href=&quot;http://www.cups.org/ghostscript.php&quot;&gt;ESP
+    GhostScript&lt;/a&gt; (&quot;lxm3200&quot; device). When one does
+    not use the
     &quot;&lt;tt&gt;-dmodel=&lt;/tt&gt;&lt;i&gt;n&lt;/i&gt;&quot;
     option, the driver behaves as the original &quot;lxm3200&quot;
     driver.&lt;p&gt;
