@@ -1,3 +1,7 @@
+2003-04-17  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* driver/lxm3200-tweaked.xml: Removed obsolete link.
+
 2003-04-14  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* db/source/driver/bj8pa06n.upp.xml,
